src/objects/Bethel_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <label>Instance URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Domain_URL__c</fullName>
        <description>The public domain of the current SF instance.</description>
        <label>Public Domain URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone_Offset__c</fullName>
        <description>Either 5 or 6</description>
        <label>Timezone Offset</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bethel Settings</label>
</CustomObject>